# neurjournal

./: .gitignore  README.md  brain_mesh.json  index.html  neurojournal.jsx  pyproject.toml  setup.sh
backend/: database.py  domains.py  ingest_locomo.py  memories.json  memory_store.py  requirements.txt  server.py
