[project]
name = "neurjournal"
version = "2.0.0"
description = "Multi-domain brain activation platform powered by Meta TRIBE v2"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.6",
    "torch>=2.5.1",
    "torchvision>=0.20",
    "huggingface_hub",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "scikit-learn>=1.5",
]

[project.scripts]
neurjournal = "backend.server:main"

[dependency-groups]
dev = [
    "watchfiles>=1.0",
]
